# console-colors

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/libs/colors/: colors.cpp  colors.hpp
